--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,55 @@ body {
     height: 100vh;
 }
 
+/*POP-UP*/
+
+.popup {
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5); /* fondo oscuro */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    margin: auto auto;
+}
+
+.popup-content {
+    background-color: var(--color-fondo);
+    padding: 30px;
+    border-radius: 8px;
+    text-align: center;
+    max-width: 400px;
+    width: 90%;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+}
+
+.popup-header {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.popup-header .close {
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.popup-footer button {
+    margin-top: 15px;
+    padding: 10px 20px;
+    background-color: #00a86b;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
 .flexallcenter {
     display: flex;
     justify-content: center;
