--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ body {
 /*POP-UP*/
 
 .popup {
+    display: none;
     position: fixed;
     z-index: 9999;
     left: 0;
@@ -62,22 +63,22 @@ body {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5); /* fondo oscuro */
-    display: flex;
+    background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
-    display: none;
-    margin: auto auto;
 }
 
 .popup-content {
     background-color: var(--color-fondo);
-    padding: 30px;
-    border-radius: 8px;
-    text-align: center;
-    max-width: 400px;
+    margin: 30% auto;
+    border: 1px solid #888;
+    padding: 20px;
+    margin: 10% auto;
     width: 90%;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+    max-width: 400px;
+    border-radius: 8px;
+    position: relative;
+    text-align: center;
 }
 
 .popup-header {
