--- a/Views/default/login.html
+++ b/Views/default/login.html
@@ -23,9 +23,8 @@
                 <a href="register.html">Crear cuenta.</a>
             </div>
             <div>
-                <a href="index.html" class="btn btn--secondary">Volver.</a>
+                <a href="../../index.html" class="btn btn--secondary">Volver.</a>
             </div>
         </div>
     </body>
-
 </html>
