--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,7 @@ body {
 }
 
 #searchPopup {
+    overflow: hidden;
     display: none;
     position: fixed;
     z-index: 1000;
@@ -111,7 +112,7 @@ body {
     right: 0;
     bottom: 0;
     justify-content: center;
-    align-items: center;
+    align-items: center;    
 }
 
 #searchPopup.show {
