mejoras en la pantalla del chat

--- a/Views/user/api-chat.html
+++ b/Views/user/api-chat.html
@@ -8,6 +8,14 @@
         <link rel="stylesheet" href="../../assets/css/api-chat-style.css">
 
         <style>
+            body{
+                background-color: #0E1621;
+            }
+            .titulo{
+                background-color: #0F172A;
+                margin: 0%;
+            }
+            
             .dot {
                 opacity: 0;
                 animation: blink 1.5s infinite;
@@ -61,7 +69,7 @@
 
     <body>
         <div id="chatContainer">
-            <h2>Asistente Nutricional IA</h2>
+            <h2 class="titulo">CalorIA</h2>
 
             <div id="response"></div>
 
