--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -735,10 +735,9 @@ body {
     width: 100%;
     margin-top: 0;
     padding-left: 0%;
-    position: fixed;
+    /* position: fixed; */
     top: 0;
-     z-index: 1001;
-
+    z-index: 1001;
 }
 
 .navbar__logo {
